--- a/Mobile_Recharge/mobile_recharge_frontend/src/index.html
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/index.html
@@ -19,8 +19,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
+  <body>
     <app-root></app-root>
   </body>
 </html>
